[gd_scene load_steps=4 format=3 uid="uid://bkghr1nptsy7r"]

[ext_resource type="Texture2D" uid="uid://7cl2ebre63bp" path="res://icon.svg" id="1_ji7dr"]
[ext_resource type="Script" path="res://Scripts/player.gd" id="1_s684d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s5nm7"]
size = Vector2(126, 126)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_s684d")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_ji7dr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_s5nm7")

[node name="dash_timer" type="Timer" parent="."]

[node name="ghost_timer" type="Timer" parent="."]
wait_time = 0.15

[connection signal="timeout" from="dash_timer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="ghost_timer" to="." method="_on_ghost_timer_timeout"]
